Bug fixes + no useless lazy return